# cimgui

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.txt  build.zig  cimconfig.h  cimgui.cpp  cimgui.h  cimgui_auto.cpp  cimgui_auto.h  cimgui_bonfire.cpp  cimgui_bonfire.h  cimgui_impl.cpp  cimgui_impl.h  cimgui_internal.h
.github/workflows/: build.yml
backend_test/: CMakeLists.txt  cimgui_extras.cpp  cimgui_extras.h  main.c
backend_test/cmake/: GenerateCimguiBindings.cmake
backend_test/example_glfw_dx11/: CMakeLists.txt  README.md  main.c  main.cpp
backend_test/example_glfw_opengl3/: CMakeLists.txt  CmakeLists.txt  README.md  main.c
backend_test/example_sdl3_vulkan/: CMakeLists.txt  README.md  main.c
backend_test/example_sdl_opengl3/: CMakeLists.txt  README.md  main.c
backend_test/example_sdl_vulkan/: CMakeLists.txt  README.md  main.c
backend_test/example_sdlgpu3/: CMakeLists.txt  GenerateCimguiBindings.cmake  README.md  main.c
backend_test/example_sdlgpu3_fetchcontent/: CMakeLists.txt  GenerateCimguiBindings.cmake  README.md  main.c
cimgui/: Makefile  auto_funcs.cpp  auto_funcs.h  cimgui.cpp  cimgui.h  cimgui.sln  cimgui.vcxproj  cimgui.vcxproj.filters  drawList.cpp  fontAtlas.cpp  gen_imgui_funcs.bat  gen_imgui_funcs.lua  gen_imgui_structs.bat  gen_imgui_structs.lua  imgui_structs.h  listClipper.cpp  test.c
cimgui/generator/: auto_funcs.h  auto_funcs.txt  cimgui_template.cpp  cimgui_template.h  gen_imgui_funcs.bat  gen_imgui_funcs.lua  gen_imgui_structs.bat  gen_imgui_structs.lua  generator.bat  generator.lua  generatorNOGCC.bat  generatorNOGCC.lua  imgui_structs.h
cmake/: cimgui.pc.in  cimguiConfig.cmake.in  cimguiDependecies.cmake.in
generator/: cimgui_impl_template.cpp  cimgui_template.cpp  cimgui_template.h  config_generator.lua  cpp2ffi.lua  generator.bat  generator.lua  generator.sh  generator2.bat  generator2.lua  generator_old.bat  generator_preprocess.bat  json.lua  preprocesed.h  print_defines.cpp
generator/output/: cimgui.cpp  cimgui.h  cimgui_impl.h  cimgui_nopreprocess.cpp  cimgui_nopreprocess.h  definitions.json  definitions.lua  impl_definitions.json  impl_definitions.lua  overloads.txt  structs_and_enums.json  structs_and_enums.lua  structs_and_enums_i.json  structs_and_enums_i.lua  typedefs_dict.json  typedefs_dict.lua
test/: CMakeLists.txt  main.c
testbuildc/: build.bat  cimguitest.c  testcl.bat
